@@ -3,4 +3,4 @@ bar <- matrix(c(1:4), 2, 2)
 foo <- mxAlgebra((-1 + 2.0 + 5e-1) %x% bar, 'foo')
 model <- mxModel('model', foo)
 modelOut <- mxRun(model)
-omxCheckEquals(matrix(c(1.5, 3.0, 4.5, 6.0), 2, 2), mxEval(foo, modelOut))
+omxCheckIdentical(matrix(c(1.5, 3.0, 4.5, 6.0), 2, 2), mxEval(foo, modelOut))
