@@ -25,9 +25,9 @@ objective <- mxFIMLObjective("expCov", "expMean")
 foo <- mxMatrix('Full', 1, 1, name = 'foo')
 bar <- mxMatrix('Full', 10, 1, name = 'bar')
 model <- mxModel(model, data, chol, expCov, expMean, objective, foo, bar)
-omxCheckEquals(mxEval(objective + foo, model, TRUE), matrix(as.numeric(NA), 1, 1))
+omxCheckIdentical(mxEval(objective + foo, model, TRUE), matrix(as.numeric(NA), 1, 1))
 omxCheckError(mxEval(objective + bar, model, TRUE), 'non-conformable arrays')
 objective <- mxFIMLObjective("expCov", "expMean", vector = TRUE)
 model <- mxModel(model, objective)
 omxCheckError(mxEval(objective + foo, model, TRUE), 'non-conformable arrays')
-omxCheckEquals(mxEval(objective + bar, model, TRUE), matrix(as.numeric(NA), 10, 1))
+omxCheckIdentical(mxEval(objective + bar, model, TRUE), matrix(as.numeric(NA), 10, 1))
