@@ -20,10 +20,10 @@ C <- mxMatrix('Full', 1, 1, values = 3, name = 'C')
 D <- mxMatrix('Full', 3, 1, labels = c('A[1,1]', 'B[1,1]', 'C[1,1]'), name = 'D')
 model <- mxModel('model', A, B, C, D)
 model <- mxRun(model)
-omxCheckEquals(mxEval(D, model), as.matrix(c(1,2,3)))
+omxCheckIdentical(mxEval(D, model), as.matrix(c(1,2,3)))
 A <- mxMatrix('Full', 2, 2, values = c(1,2,3,4), byrow = TRUE, name = 'A')
 B <- mxAlgebra(A + A, name = 'B')
 C <- mxMatrix('Full', 2, 2, labels = c('B[2,2]', 'B[2,1]', 'B[1,2]', 'B[1,1]'), byrow = TRUE, name = 'C')
 model <- mxModel('model', A, B, C)
 model <- mxRun(model)
-omxCheckEquals(mxEval(C, model), matrix(rev(c(1,2,3,4)) * 2, 2, 2, byrow = TRUE))
+omxCheckIdentical(mxEval(C, model), matrix(rev(c(1,2,3,4)) * 2, 2, 2, byrow = TRUE))
